update laporan harian

--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -159,4 +159,77 @@ No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Skor} \\ \hline
 \multicolumn{2}{|l|}{Total}        &                         \\ \hline
 \end{tabular}
 \label{tabelharian11}
-\end{table} 
+\end{table}
+
+\section{Laporan Kegiatan Harian Minggu ke 3}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 11-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      & -  \\ \hline
+2  & Produktif                     & Mengecek hasil kuis 2a pada mata kuliah pemrograman 3 \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 09.30 \\ Pulang jam : 16.35\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan mmeja kerja sebelum pulang. \\ \hline
+\end{tabular}
+\label{tabelharian12}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 12-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      & Flask\#20  \\ \hline
+2  & Produktif                     & Membantu mahasiswa baru yang magang di IRC  \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 09.20 \\ Pulang jam : 16.20\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan mmeja kerja sebelum pulang. \\ \hline
+\end{tabular}
+\label{tabelharian13}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 13-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      & Flask\#22  \\ \hline
+2  & Produktif                     & Belajar Aplikasi Python dari udemy untuk materi pengajuan proposal internship 2 \\ \hline
+3  & Integritas                    & conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 07.10 \\ Pulang jam : 15.35\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan mmeja kerja sebelum pulang. \\ \hline
+\end{tabular}
+\label{tabelharian14}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 14-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      & - \\ \hline
+2  & Produktif                     & Didkusi dan simulasi penggunaan gitlab pada sisi dosen dan mahasiswa. \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 08.40 \\ Pulang jam : 16.20\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan mmeja kerja sebelum pulang. \\ \hline
+\end{tabular}
+\label{tabelharian15}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Minggu Ke-3}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Skor} \\ \hline
+1  & Dedikasi                      &                          \\ \hline
+2  & Produktifitas                 &                          \\ \hline
+3  & Integritas                    &                          \\ \hline
+4  & Disiplin                      &                          \\ \hline
+5  & Loyalitas                     &                          \\ \hline
+\multicolumn{2}{|l|}{Total}        &                         \\ \hline
+\end{tabular}
+\label{tabelharian16}
+\end{table}
