update hari ini

--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -246,6 +246,23 @@
 \end{tabular}
 \end{table}
 
+\subsection{Laporan Harian Pekan ke-4}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 18 Maret 2019}
+\label{tab:lh180319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/flask \#24 \\ \hline
+2 & Produktifitas & Melakukan penilaian kuis dan tugas chapter 3 Pemrograman-III kelas 2A.\\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.50 WIB \\
+ &  & Jam Pulang : 15.45 WIB \\ \hline
+5 & Loyalitas & Menyapu, membersihkan dan merapihkan meja \\ \hline
+\end{tabular}
+\end{table}
+
 \section{Penilaian Mingguan}
 
 \subsection{Penilaian Mingguan Pekan ke-1}
@@ -288,8 +305,8 @@
 
 \begin{table}[htp]
 \centering
-\caption{Nilai Minggu ke-3 (Update 11/3/2019)}
-\label{tab:nm02}
+\caption{Nilai Minggu ke-3}
+\label{tab:nm03}
 \begin{tabular}{|c|c|c|p{\textwidth}|}
 \hline
 \textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
@@ -302,6 +319,23 @@
 \end{tabular}
 \end{table}
 
+\subsection{Penilaian Mingguan Pekan ke-4}
+
+\begin{table}[htp]
+\centering
+\caption{Nilai Minggu ke-4 (Update 18/3/2019)}
+\label{tab:nm04}
+\begin{tabular}{|c|c|c|p{\textwidth}|}
+\hline
+\textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
+1. & Dedikasi & 1 \\ \hline
+2. & Produktifitas & 1 \\ \hline
+3. & Integritas & 1 \\ \hline
+4. & Disiplin & 1 \\ \hline
+5. & Loyalitas & 1 \\ \hline
+ & \textbf{Total Poin} & 5 \\ \hline
+\end{tabular}
+\end{table}
 
 %\begin{table}
 %\begin{center}
