update buku harian

--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -178,3 +178,43 @@ No&Tanggal&Kegiatan\\
 \end{tabular}
 \label{table:contoh}
 \end{table}
+
+\begin{table}[h]
+\begin{center}
+\caption{Tabel Mingguan}
+\begin{tabular}{|c|l|}
+\hline
+Kategori& Sekor Nilai Kategori mingguan\\
+\hline
+Dedikasi & -\\
+\hline
+Produktif & -\\
+\hline
+Integritas & -\\
+\hline
+Disiplin & -\\
+\hline
+Loyalitas & -\\
+\hline
+\end{tabular}
+\end{center}
+\label {Tabel:contoh} 
+\end{table}
+
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian minggu ke4 IRC}
+\centering
+\begin{tabular}{|c|c|l|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{011-03-2019}
+&DEDIKASI :- \\
+&&PRODUKTIF :memberi nilai 3C dan menilai persentasi imron\\
+&&INTEGRITAS :able to merge\\
+&&DISIPLIN : Jam Datang 8.52 Jam Pulang 16:43\\
+&&LOYALITAS :Merapihkan kan tempat tanggung jawab di IRC\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
