menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -758,6 +758,63 @@
 \item Membersihkan area belakang IRC
 \item Mencuci gelas
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 18/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#34
+\item Menambah chapter3 \#2 (repository python3)
+\item Merapihkan materi \#3 (repository python3)
+\item Memeriksa tugas Mata Kuliah kecerdasan buatan chapter 3 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput nilai bonus kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput nilai tugas mata kuliah kecerdasan buatan chapter 3 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput nilai bonus untuk kelas 2b
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#34
+\item Menambah chapter3 \#2 (repository python3)
+\item Merapihkan materi \#3 (repository python3)
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#34
+\item Menambah chapter3 \#2 (repository python3)
+\item Merapihkan materi \#3 (repository python3)
+\item Memeriksa tugas Mata Kuliah kecerdasan buatan chapter 3 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput nilai bonus kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput nilai tugas mata kuliah kecerdasan buatan chapter 3 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput nilai bonus untuk kelas 2b
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 16.40
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Menyapu dan membersihkan area sidang IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Mencuci gelas
+\end{enumerate}
 \end{enumerate}
 
 
