update laporan harian

--- a/section/chapter8.tex
+++ b/section/chapter8.tex
@@ -1,8 +1,7 @@
 \chapter{Doli Jonviter NT Simbolon/1154016}
 
-\section{Laporan Harian}
+\subsection{Laporan Harian Pekan ke-1}
 
-\subsection{Laporan Harian ke-1}
 
 \begin{table}[htp]
 \caption{Laporan Harian Tanggal 12 Maret 2019}
@@ -19,7 +18,7 @@
 \end{tabular}
 \end{table}
 
-\subsection{Laporan Harian ke-2}
+
 
 \begin{table}[htp]
 \caption{Laporan Harian Tanggal 13 Maret 2019}
@@ -38,8 +37,6 @@
 \end{table}
 
 
-\subsection{Laporan Harian ke-3}
-
 \begin{table}[htp]
 \caption{Laporan Harian Tanggal 14 Maret 2019}
 \label{tab:lh140319}
@@ -57,7 +54,6 @@
 \end{tabular}
 \end{table}
 
-\subsection{Laporan Harian ke-4}
 
 \begin{table}[htp]
 \caption{Laporan Harian Tanggal 15 Maret 2019}
@@ -70,6 +66,27 @@
    & & b.Mempelajari materi Udemy \\ \hline
    & & c.Toefel \\ \hline
 3 & Integritas & bukuInformatika/DeepLearningComputerVision \\ \hline
+4 & Disiplin & Jam Datang : 09:00 WIB \\
+   &  & Jam Pulang : 15.10 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
+\end{tabular}
+\end{table}
+
+
+\subsection{Laporan Harian Pekan ke-2}
+
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 18 Maret 2019}
+\label{tab:lh180319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - \\ \hline
+2 & Produktifitas & a.Mengerjakan project PHP7 \\
+   & & b.bimbingan Internship \\ \hline
+   & & c.Mengulang Algoritma \\ \hline
+3 & Integritas & able to merge \\ \hline
 4 & Disiplin & Jam Datang : 09:00 WIB \\
    &  & Jam Pulang : 15.10 WIB \\ \hline
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
