update laporan harian

--- a/section/chapter4.tex
+++ b/section/chapter4.tex
@@ -33,7 +33,7 @@ no & kategori    & keterangan                                                   
 5  & loyalitas   & merapihkan kursi                                                          \\ \hline
 \end{tabular}
 \label{table:contoh}
-\end{table} 
+\end{table}
 
 \begin{table}[]
 \caption{Tabel Kegiatan Harian 05-03-2019}
@@ -47,7 +47,7 @@ no & kategori    & keterangan                                                   
 5  & loyalitas   & merapihkan kursi                                                          \\ \hline
 \end{tabular}
 \label{table:contoh}
-\end{table} 
+\end{table}
 
 \begin{table}[]
 \caption{Tabel Kegiatan Harian 06 -03-2019}
@@ -62,3 +62,69 @@ no & kategori    & keterangan                                                   
 \end{tabular}
 \label{table:contoh}
 \end{table} 
+
+\begin{table}[]
+\caption{Table kegiatan Harian 08 -03-2019}
+\begin{tabular}{|l|l|l|}
+\hline
+no & kategori    & keterangan                                                                 \\ \hline
+1  & dedikasi    & -                                                                          \\ \hline
+2  & produktif   & revisi internship 1                                                        \\ \hline
+3  & intergritas & able to merge                                                              \\ \hline
+4  & disiplin    & \begin{tabular}[c]{@{}l@{}}masuk jam 08:15\\ pulang jam:15:18\end{tabular} \\ \hline
+5  & loyalitas   & merapihkan kursi                                                           \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[]
+\caption{Table Kegiatan Harian 11 03-2019}
+\begin{tabular}{|l|l|l|}
+\hline
+no & kategori    & keterangan                                                                 \\ \hline
+1  & dedikasi    & \begin{tabular}[c]{@{}l@{}}Merged \\ \#20 into master.\end{tabular}        \\ \hline
+2  & produktif   & UTS SP Algo                                                                \\ \hline
+3  & intergritas & able to merge                                                              \\ \hline
+4  & disiplin    & \begin{tabular}[c]{@{}l@{}}masuk jam 08:10\\ pulang jam:15:00\end{tabular} \\ \hline
+5  & loyalitas   & merapihkan kursi                                                           \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[]
+\caption{Table Kegiatan Harian 12-03-2019}
+\begin{tabular}{|l|l|l|}
+\hline
+no & kategori    & keterangan                                                                 \\ \hline
+1  & dedikasi    & ngepull jarkom                                                             \\ \hline
+2  & produktif   & masuk kelas data mining                                                    \\ \hline
+3  & intergritas & able to merge                                                              \\ \hline
+4  & disiplin    & \begin{tabular}[c]{@{}l@{}}masuk jam 08:10\\ pulang jam:15:15\end{tabular} \\ \hline
+5  & loyalitas   & merapihkan kursi                                                           \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[]
+\caption{Table kegiatan Harian 13 -03-2019}
+\begin{tabular}{|l|l|l|}
+\hline
+no & kategori    & keterangan                                                                 \\ \hline
+1  & dedikasi    & ngepull jarkom                                                             \\ \hline
+2  & produktif   & masuk kelas administrasi jaringan komputer                                 \\ \hline
+3  & intergritas & able to merge                                                              \\ \hline
+4  & disiplin    & \begin{tabular}[c]{@{}l@{}}masuk jam 09:15\\ pulang jam:15:15\end{tabular} \\ \hline
+5  & loyalitas   & merapihkan kursi                                                           \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[]
+\caption{Table Kegiatan Harian 14 -03-2019}
+\begin{tabular}{|l|l|l|}
+\hline
+no & kategori    & keterangan                                                                 \\ \hline
+1  & dedikasi    & ngepull jarkom                                                             \\ \hline
+2  & produktif   & masuk kelas data mining                                                    \\ \hline
+3  & intergritas & able to merge                                                              \\ \hline
+4  & disiplin    & \begin{tabular}[c]{@{}l@{}}masuk jam 09:15\\ pulang jam:15:20\end{tabular} \\ \hline
+5  & loyalitas   & merapihkan kursi                                                           \\ \hline
+\end{tabular}
+\end{table}
+
