--- a/section/chapter9.tex
+++ b/section/chapter9.tex
@@ -78,3 +78,18 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 19 Maret 2019}
+\label{tab:lh190319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & -  DeepLearningComputerVision \\ \hline
+2 & Produktifitas & belajar udemy, github, mengulang algoritma \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 08.58 WIB \\
+ &  & Jam Pulang : 16.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
