menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -815,6 +815,57 @@
 \item Membersihkan area belakang IRC
 \item Mencuci gelas
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 19/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#35
+\item Mengatur ulang nilai tugas mata kuliah kecerdasan buatan chapter 3 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginformasikan kepada AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064 (kelas 3c) untuk presentasi mengenai  tugas chapter 2 mata kuliah kecerdasan buatan
+\item Menyimak presentasi tugas mata kuliah kecerdasan buatan chapter 2 kelas 3c (YUSNIAR SYARIF SIDIQ 1164089)
+\item Menginput nilai hasil presentasi mata kuliah kecerdasan buatan chapter 2 (YUSNIAR SYARIF SIDIQ 1164089 kelas 3c)
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#35
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#35
+\item Mengatur ulang nilai tugas mata kuliah kecerdasan buatan chapter 3 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginformasikan kepada AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064 (kelas 3c) untuk presentasi mengenai  tugas chapter 2 mata kuliah kecerdasan buatan
+\item Menyimak presentasi tugas mata kuliah kecerdasan buatan chapter 2 kelas 3c (YUSNIAR SYARIF SIDIQ 1164089)
+\item Menginput nilai hasil presentasi mata kuliah kecerdasan buatan chapter 2 (YUSNIAR SYARIF SIDIQ 1164089 kelas 3c)
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 16.20
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Menyapu dan membersihkan area sidang IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Mencuci gelas
+\end{enumerate}
 \end{enumerate}
 
 
