--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -263,6 +263,22 @@
 \end{tabular}
 \end{table}
 
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 19 Maret 2019}
+\label{tab:lh190319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/flask \#25 \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Melakukan penilaian tugas ke-3 Kecerdasan Buatan kelas 3C\\atas nama Fadila, Lusia, dan Rahmi.\end{tabular} \\ \hline
+ &  & b. Menangani keluhan mahasiswa kelas 2A terkait nilai tugas ke-3.\\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.24 WIB \\
+ &  & Jam Pulang : 16.24 WIB \\ \hline
+5 & Loyalitas & Menyapu, membersihkan dan merapihkan meja, serta mencuci gelas orange. \\ \hline
+\end{tabular}
+\end{table}
+
 \section{Penilaian Mingguan}
 
 \subsection{Penilaian Mingguan Pekan ke-1}
