--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -208,11 +208,18 @@ Loyalitas & -\\
 \hline
 No&Tanggal&Kegiatan\\
 \hline
-1.&\multirow{2}{*}{011-03-2019}
+1.&\multirow{2}{*}{018-03-2019}
 &DEDIKASI :- \\
 &&PRODUKTIF :memberi nilai 3C dan menilai persentasi imron\\
 &&INTEGRITAS :able to merge\\
 &&DISIPLIN : Jam Datang 8.52 Jam Pulang 16:43\\
+&&LOYALITAS :Merapihkan kan tempat tanggung jawab di IRC\\
+\hline
+2.&\multirow{2}{*}{019-03-2019}
+&DEDIKASI :pull requst gis2019\#36\\
+&&PRODUKTIF :menilai tugas yusniar 3C\\
+&&INTEGRITAS :able to merge\\
+&&DISIPLIN : Jam Datang 8.42 Jam Pulang 15:08\\
 &&LOYALITAS :Merapihkan kan tempat tanggung jawab di IRC\\
 \hline
 \end{tabular}
