--- a/section/chapter7.tex
+++ b/section/chapter7.tex
@@ -11,7 +11,7 @@
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & - \\ \hline
-2 & Produktifitas & bekerja dengan git bash \\
+2 & Produktifitas & bekerja dengan git bash \\ \hline
 3 & Integritas & able to merge/has no conflict \\ \hline
 4 & Disiplin & Jam Datang : 09.00 WIB \\
  &  & Jam Pulang : 16.00 WIB \\ \hline
@@ -26,7 +26,7 @@
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi &  - \\ \hline
-2 & Produktifitas & mengupdate buku informatika \\
+2 & Produktifitas & mengupdate buku informatika \\ \hline
 3 & Integritas & conflict \\ \hline
 4 & Disiplin & Jam Datang : 09.00 WIB \\
  &  & Jam Pulang : 16.00 WIB \\ \hline
@@ -41,7 +41,7 @@
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & BukuInformatika/DeepLearningComputerVision\#4  \\ \hline
-2 & Produktifitas & mengupdate buku informatika, masuk kelas dan belajar gitlab \\
+2 & Produktifitas & mengupdate buku informatika, masuk kelas dan belajar gitlab \\ \hline
 3 & Integritas & able to merge \\ \hline
 4 & Disiplin & Jam Datang : 09.00 WIB \\
  &  & Jam Pulang : 16.00 WIB \\ \hline
@@ -56,7 +56,7 @@
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & BukuInformatika/DeepLearningComputerVision\#7  \\ \hline
-2 & Produktifitas & mengupdate buku informatika, tes toefl dan belajar gitlab \\
+2 & Produktifitas & mengupdate buku informatika, tes toefl dan belajar gitlab \\ \hline
 3 & Integritas & able to merge \\ \hline
 4 & Disiplin & Jam Datang : 09.00 WIB \\
  &  & Jam Pulang : 15.00 WIB \\ \hline
@@ -73,7 +73,7 @@
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & BukuInformatika/DeepLearningComputerVision\#12  \\ \hline
-2 & Produktifitas & mengupdate buku informatika, belajar install windows \\
+2 & Produktifitas & mengupdate buku informatika, belajar install windows \\ \hline
 3 & Integritas & able to merge \\ \hline
 4 & Disiplin & Jam Datang : 09.00 WIB \\
  &  & Jam Pulang : 15.00 WIB \\ \hline
@@ -88,8 +88,23 @@
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & BukuInformatika/DeepLearningComputerVision\#14  \\ \hline
-2 & Produktifitas & mengupdate buku informatika, mempelajari tutorial gitlab\\
+2 & Produktifitas & mengupdate buku informatika, mempelajari tutorial gitlab\\ \hline
 3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 09.00 WIB \\
+ &  & Jam Pulang : 15.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 20 Maret 2019}
+\label{tab:lh200319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/DeepLearningComputerVision \\ \hline
+2 & Produktifitas & mengupdate buku informatika, mempelajari tutorial gitlab, persentasi tingkat 3C\\ \hline
+3 & Integritas & conflict \\ \hline
 4 & Disiplin & Jam Datang : 09.00 WIB \\
  &  & Jam Pulang : 15.00 WIB \\ \hline
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
