update tugas harian

--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -1,4 +1,4 @@
-\chapter{Erik Ginting}
+\chapter{Erik Ginting/1124018}
 
 \begin{table}[h]
 \caption{Tabel Kegiatan Harian IRC}
@@ -24,4 +24,234 @@ No&Tanggal&Kegiatan\\
 \hline
 \end{tabular}
 \label{table:contoh}
-\end{table}
+\end{table} 
+
+\begin{enumerate}
+\item \textbf{Tugas Harian tanggal 01/03/2019}
+\begin{enumerate}
+\item Melakukan pre test TOEFL
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item -
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Melakukan pre test TOEFL
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item -
+\end{enumerate}
+
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 09.00
+\item Jam Keluar : 11.40 (Dikarenakan ada sosialisasi INTERNSHIP II)
+\end{enumerate}
+
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Merapihkan kursi sebelum pulang dari IRC
+\item Mengelap meja pribadi
+\item Menyapu dan merapihkan IRC
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 11/03/2019}
+\begin{enumerate}
+\item Masuk kelas Pemrograman III
+\item Memeriksa Quiz I Mata Kuliah Pemrograman III kelas 2C
+\item Merapihkan kursi sebelum jam pulang
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item -
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Masuk kelas Pemrograman III
+\item Memeriksa Quiz I Mata Kuliah Pemrograman III kelas 2C
+\item Merapihkan kursi sebelum jam pulang
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item -
+\end{enumerate}
+
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 09.10
+\item Jam Keluar : 15.00
+\end{enumerate}
+
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Merapihkan kursi sebelum pulamg dari IRC
+\item Menyapu dan membersihkan ruangan IRC
+\item Membersihkan meja pribadi
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 14/03/2019}
+\begin{enumerate}
+\item Diskusi mengenai barang barang yang akan ditambahkan ke IRC
+\item Masuk ke kelas 3c Mata Kuliah Kecerdasan Buatan
+\item Melakukan latihan dasar menggunakan gitlab
+\item Merapihkan kursi setelah jam pulang
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item -
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Diskusi mengenai barang barang yang akan ditambahkan ke IRC
+\item Masuk ke kelas 3c Mata Kuliah Kecerdasan Buatan
+\item Melakukan latihan dasar menggunakan gitlab
+\item Merapihkan kursi setelah jam pulang
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item -
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 09.15
+\item Jam Keluar : 15.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 18/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai tutorial windows 10
+\item Memeriksa tugas Mata Kuliah kecerdasan buatan chapter 3 kelas 3c
+\item Menginput nilai bonus untuk kelas 2C
+\item Merapihkan kursi setelah jam pulang
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai tutorial windows 10
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai tutorial windows 10
+\item Memeriksa tugas Mata Kuliah kecerdasan buatan chapter 3 kelas 3c
+\item Menginput nilai bonus untuk kelas 2C
+\item Merapihkan kursi setelah jam pulang
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 09.30
+\item Jam Keluar : 15.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat sebelum pulang dari IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 19/03/2019}
+\begin{enumerate}
+\item Menambah materi tutorial windows 10
+\item menambah materi buku informatika tentang ANNs
+\item Menginstal komputer IRC 
+\item Menginput nilai hasil presentasi mata kuliah kecerdasan buatan kelas 3C
+\item Merapihkan kursi setelah jam pulang
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi tutorial windows 10
+\item Menambah materi buku informatika tentang ANNs
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi tutorial windows 10
+\item Menambah materi buku informatika tentang ANNs
+\item Merapihkan kursi setelah jam pulang
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 09.05
+\item Jam Keluar : 16.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Merapihkan kursi sebelum pulang dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 20/03/2019}
+\begin{enumerate}
+\item Menyimak presentasi Kecerdasan Buatan kelas 3C
+\item Menginstal aplikasi di komputer IRC
+\item Menginput nilai hasil presentasi mata kuliah kecerdasan buatan kelas 3C
+\item Merapihkan kursi setelah jam pulang
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item update nilai Kecerdasan Buatan kelas 3C
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Memeriksa ruangan IRC sebelum pulang
+\item Merapihkan kursi setelah jam pulang
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item -
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 09.05
+\item Jam Keluar : 15.45
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Merapihkan kursi sebelum pulang dari IRC
+\item Membersihkan meja pribadi
+\item Memeriksa AC sebelum pulang
+\end{enumerate}
+\end{enumerate}
