--- a/section/chapter7.tex
+++ b/section/chapter7.tex
@@ -102,7 +102,7 @@
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
-1 & Dedikasi & BukuInformatika/DeepLearningComputerVision \\ \hline
+1 & Dedikasi & BukuInformatika/DeepLearningComputerVision\#16 \\ \hline
 2 & Produktifitas & mengupdate buku informatika, mempelajari tutorial gitlab, persentasi tingkat 3C\\ \hline
 3 & Integritas & conflict \\ \hline
 4 & Disiplin & Jam Datang : 09.00 WIB \\
