--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -208,19 +208,33 @@ Loyalitas & -\\
 \hline
 No&Tanggal&Kegiatan\\
 \hline
-1.&\multirow{2}{*}{018-03-2019}
+1.&\multirow{2}{*}{18-03-2019}
 &DEDIKASI :- \\
 &&PRODUKTIF :memberi nilai 3C dan menilai persentasi imron\\
 &&INTEGRITAS :able to merge\\
 &&DISIPLIN : Jam Datang 8.52 Jam Pulang 16:43\\
 &&LOYALITAS :Merapihkan kan tempat tanggung jawab di IRC\\
 \hline
-2.&\multirow{2}{*}{019-03-2019}
+2.&\multirow{2}{*}{19-03-2019}
 &DEDIKASI :pull requst gis2019\#36\\
 &&PRODUKTIF :menilai tugas yusniar 3C\\
 &&INTEGRITAS :able to merge\\
 &&DISIPLIN : Jam Datang 8.42 Jam Pulang 15:08\\
 &&LOYALITAS :Merapihkan kan tempat tanggung jawab di IRC\\
+\hline
+3.&\multirow{2}{*}{20-03-2019}
+&DEDIKASI :pull requst gis2019\#38\\
+&&PRODUKTIF :menilai tugas persentasi yusniar 3C\\
+&&INTEGRITAS :able to merge\\
+&&DISIPLIN : Jam Datang 08:58 Jam Pulang 16:08\\
+&&LOYALITAS :Merapihkan kan tempat tanggung jawab di IRC\\
+\hline
+4.&\multirow{2}{*}{21-03-2019}
+&DEDIKASI :pull requst gis2019\#39\\
+&&PRODUKTIF :menilai tugas persentasi yusniar 3C\\
+&&INTEGRITAS :able to merge\\
+&&DISIPLIN : Jam Datang 09:10 Jam Pulang 02:08\\
+&&LOYALITAS :-\\
 \hline
 \end{tabular}
 \label{table:contoh}
