--- a/section/chapter9.tex
+++ b/section/chapter9.tex
@@ -123,3 +123,19 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
+
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 22 Maret 2019}
+\label{tab:lh220319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - BukuInformatika/ DeepLearningComputerVision \\ \hline
+2 & Produktifitas & Ibadah, bukuinformatika, ngerjain proposal TA, proposal Internship  \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 08.55 WIB \\
+ &  & Jam Pulang : 15.30 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
