--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -922,6 +922,8 @@
 \item Menyimak presentasi tugas mata kuliah kecerdasan buatan chapter 2 kelas 2b (Ichsan Hizman Hardy 1174034)
 \item Menginput nilai hasil presentasi mata kuliah kecerdasan buatan kelas 2b (Faisal Najib Abdullah 1174042, Luthfi Muhammad Nabil 1174035, Ichsan Hizman Hardy 1174034, Alit fajar Kurniawan 1174057, Dika Sukma Pradana 1174050)
 \item Menginput nilai bonus kelas 2b (Ichsan Hizman Hardy 1174034, Fathi Rabbani 1164074)
+\item Mencari jurnal untuk bahan proposal internship II
+\item Mengerjakan Proposal internship II
 \item Menyapu area sidang IRC
 \item Membersihkan meja pribadi dan area belakang IRC
 \item Merapihkan kursi setelah jam pulang 
@@ -966,6 +968,50 @@
 \item Membersihkan meja pribadi
 \item Membersihkan area belakang IRC
 \item Mencuci gelas
+\end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 22/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai map server \#41
+\item Mengerjakan proposal TA
+\item Memerg tugas chapter 4 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai map server \#41
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai map server \#41
+\item Mengerjakan proposal TA
+\item Memerg tugas chapter 4 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 17.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
 \end{enumerate}
 \end{enumerate}
 
