update laporan harian

--- a/section/chapter8.tex
+++ b/section/chapter8.tex
@@ -152,7 +152,7 @@
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & - \\ \hline
 2 & Produktifitas & a.Mengerjakan project PHP7 \\
-   & & b.proposal Intrenship dan T.A \\ \hline
+   & & b.mengerjakan proposal Intrenship dan T.A \\ \hline
 3 & Integritas & able to merge \\ \hline
 4 & Disiplin & Jam Datang : 09:00 WIB \\
    &  & Jam Pulang : 15:30 \\ \hline
