update laporan harian

--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -232,4 +232,99 @@ No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Skor} \\ \hline
 \multicolumn{2}{|l|}{Total}        &                         \\ \hline
 \end{tabular}
 \label{tabelharian16}
+\end{table} 
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 18-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan}\\ \hline
+1  & Dedikasi                      & -  \\ \hline
+2  & Produktif                     & \begin{tabular}[c]{@{}l@{}}1. Melakukan penilaian Kuis dari kelas 2a.\\ 2. Belajar Udemy sebagai materi untuk proposal internship 2\end{tabular} \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk Jam ; 09.20\\ Pulang Jam : 16.10\end{tabular}\\ \hline
+5  & Loyalitas                     & Merapikan meja kerja sebelum pulang. \\ \hline
+\end{tabular}
+\label{tabelharian17}
 \end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 19-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan}\\ \hline
+1  & Dedikasi                      & BukuAI\#1\\ \hline
+2  & Produktif                     & \begin{tabular}[c]{@{}l@{}}1. Belajar Udemy sebagai materi untuk proposal internship 2\\ 2. Mengerjakan BukuAI.\end{tabular} \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk Jam ; 09.00\\ Pulang Jam : 16.25\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan meja kerja sebelum pulang. \\ \hline
+\end{tabular}
+\label{tabelharian18}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 20-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan}\\ \hline
+1  & Dedikasi                      & BukuAI\#2                                                                      \\ \hline
+2  & Produktif                     & Belajar Udemy sebagai materi untuk proposal internship 2                       \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik                                                   \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk Jam ; 07.37\\ Pulang Jam : 12.15\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan meja kerja sebelum pulang.                                           \\ \hline
+\end{tabular}
+\label{tabelharian19}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 21-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan}\\ \hline
+1  & Dedikasi                      & -                                                                              \\ \hline
+2  & Produktif                     & Masuk kelas kecerdasan buatan                                                  \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik                                                   \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk Jam ; 07.00\\ Pulang Jam : 16.45\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan meja kerja sebelum pulang.                                           \\ \hline
+\end{tabular}
+\label{tabelharian20}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 22-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan}\\ \hline
+1  & Dedikasi                      & -                                                                              \\ \hline
+2  & Produktif                     & Mengerjakan Proposal untuk TA                                                  \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik                                                   \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk Jam ; 09.50\\ Pulang Jam : 16.45\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan meja kerja sebelum pulang.                                           \\ \hline
+\end{tabular}
+\label{tabelharian21}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Minggu Ke-4}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Skor} \\ \hline
+1  & Dedikasi                      &                          \\ \hline
+2  & Produktifitas                 &                          \\ \hline
+3  & Integritas                    &                          \\ \hline
+4  & Disiplin                      &                          \\ \hline
+5  & Loyalitas                     &                          \\ \hline
+\multicolumn{2}{|l|}{Total}        &                         \\ \hline
+\end{tabular}
+\label{tabelharian22}
+\end{table}
+
+%\begin{table}[]
+%\caption{Laporan Kegiatan Harian pada tanggal 21-03-2019}
+%\begin{tabular}{|c|l|l|}
+%\hline
+%No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan}\\ \hline
+%
+%\end{tabular}
+%\label{tabelharian20}
+%\end{table}
