--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1013,6 +1013,60 @@
 \item Membersihkan meja pribadi
 \item Membersihkan area belakang IRC
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 25/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai MapServer \#42
+\item Memeriksa  tugas chapter 4 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063)
+\item Membuat video mengenai EEG (Mindwave) untuk kuliah umum
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai MapServer \#42
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai MapServer \#42
+\item Memeriksa  tugas chapter 4 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063)
+\item Membuat video mengenai EEG (Mindwave) untuk kuliah umum
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 17.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Mencuci gelas IRC
+\item Membeli kopi untuk di IRC
+\item Membeli makan untuk Pak Fachrie dan Pak Rolly
+\end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 26/03/2019}
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Membeli sendal jepit untuk di IRC
+\end{enumerate}
 \end{enumerate}
 
 
@@ -1040,6 +1094,56 @@ Loyalitas & 3 \\
 \end{table}
 
 \section{Score Mingguan dari tanggal 04/03/2019 sampai 08/03/2019}
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan}.
+\begin{table}[!ht]
+\centering
+\begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
+\hline
+Kategori & Keterangan Nilai \\
+\hline
+Dedikasi & 3 \\
+\hline
+Produktif & 3 \\
+\hline
+Integritas & 3 \\
+\hline
+Disiplin & 3 \\
+\hline
+Loyalitas & 3 \\
+\hline
+\end{tabular}
+\caption{Tabel Score Mingguan}
+\label{table:scoremingguan}
+\end{table}
+
+
+
+
+\section{Score Mingguan dari tanggal 11/03/2019 sampai 15/03/2019}
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan}.
+\begin{table}[!ht]
+\centering
+\begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
+\hline
+Kategori & Keterangan Nilai \\
+\hline
+Dedikasi & 3 \\
+\hline
+Produktif & 3 \\
+\hline
+Integritas & 3 \\
+\hline
+Disiplin & 3 \\
+\hline
+Loyalitas & 3 \\
+\hline
+\end{tabular}
+\caption{Tabel Score Mingguan}
+\label{table:scoremingguan}
+\end{table}
+
+
+\section{Score Mingguan dari tanggal 18/03/2019 sampai 22/03/2019}
 Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan}.
 \begin{table}[!ht]
 \centering
